Fix issue with alignment of leaderbord at the centre of the page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,21 +42,29 @@ button {
     position: relative;
     text-align: center;
 }
-#current-game-container {
-    float: left;
-    width: 30%;
+
+#game-status {
+    text-align: center;
+    position: relative;
     padding: 2rem;
 }
+
+#current-game-container {
+    padding: 2rem;
+    text-align: center;
+}
+
+
 #current-game-display {
     font-size: 150%;
-    float: right;
+    
 }
 
 #counter-container {
-    float: right;
-    width: 30%;
+    text-align: center;
     padding: 2rem;
     font-family: 'Chelsea Market', cursive;
+    
 }
 
 .header {
@@ -68,8 +76,9 @@ button {
 #counter-display {
     display: grid;
     grid-template-columns: auto auto;
-    text-align: center;
-    float: left;
+    width: 800px;
+    margin-right: auto;
+    margin-left: auto;
     font-size: 150%;
     text-align: center;
 }
@@ -78,7 +87,7 @@ button {
     border: 1px solid rgba(0, 0, 0, 0.8);
     padding: 2rem;
     text-align: center;
-    width: 200px;
+    
     background-color: rgba(255, 255, 255, 0.8)
 }
 .clear {
